--- a/public/Boardmembers_pro_law/board/index.html
+++ b/public/Boardmembers_pro_law/board/index.html
@@ -473,13 +473,15 @@
 <!-- loader end  -->
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C1TE5PEN8F"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-C1TE5PEN8F');
-</script>
+if (window.location.hostname != 'localhost' && window.location.hostname != '127.0.0.1') {
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-C1TE5PEN8F');
+  </script>
+}
 <!-- Google tag (gtag.js) -->
 
 
