--- a/public/about-old/index.html
+++ b/public/about-old/index.html
@@ -33,13 +33,15 @@
   <link rel='stylesheet' href='../static/old-Nav.css' type='text/css' media='all' />    
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C1TE5PEN8F"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-C1TE5PEN8F');
-</script>
+if (window.location.hostname != 'localhost' && window.location.hostname != '127.0.0.1') {
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-C1TE5PEN8F');
+  </script>
+}
 </head>
 
 
