--- a/public/faq/index.html
+++ b/public/faq/index.html
@@ -494,13 +494,15 @@ Answer: The exit strategy is either an IPO or selling it to a competitor.
 
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-C1TE5PEN8F"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-C1TE5PEN8F');
-</script>
+if (window.location.hostname != 'localhost' && window.location.hostname != '127.0.0.1') {
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-C1TE5PEN8F');
+  </script>
+}
 <!-- Google tag (gtag.js) -->
 <script src='https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.3.3/js/swiper.js'></script>
 <script  src="../static/script_new/SwiperScript.js"></script>
