strategy workign cool

--- a/public/Boardmembers_pro_law/faq_pro/index.html
+++ b/public/Boardmembers_pro_law/faq_pro/index.html
@@ -238,8 +238,7 @@
             Answer: No
             <br /><br />
             4. Who else is a part of this venture?
-            <br />Answer: Myself and Non-Executive Board of Directors, including Legal, Finance,Accounting ,2-3 Industry
-            Experts, and advisors.
+            <br />Answer: Myself and Non-Executive Board of Directors
             <br /><br />
 
             5. What is the geography focus of the venture?
@@ -254,7 +253,7 @@
             <br /><br />
 
             7. What are you waiting for?<br />
-            Answer: Finish assembling the board, get the law firm & then we'll be all set to acquire the first deal.
+            Answer: Finalize on the law firm & then we'll be all set to acquire the first deal.
             <br /><br />
 
             8. What is the management team, and how many acquisitions are planned?
