--- a/public/Boardmembers_pro_law/jim/index.html
+++ b/public/Boardmembers_pro_law/jim/index.html
@@ -177,7 +177,7 @@
          <div style="color: white;" class="h-100 p-5 rounded-3 ">
            <p style="margin-top: 70px;" class="trailw"><span class="hr"></span>EQUITY GROUP</p>
           
-           <h3 style="margin-top: 80px;" class="display-2 push-rt-md">Jim </h3>
+           <h3 style="margin-top: 80px;" class="display-2 push-rt-md">Jim Sansburn</h3>
            <h4 style="margin-top: 50px;" class="display-7 mb-4 push-rt-md" >Finance Director, EQGPI </h4>
 
            <!-- <h3 style="margin-top: 80px;" class="display-2 px-md-5">Paul Foster</h3>
