--- a/public/strategy/index.html
+++ b/public/strategy/index.html
@@ -368,6 +368,36 @@
 
 
 
+
+        <br/><br/>
+        <h4> <b> Basement Remodel:  </b></h4>
+        
+        <b>  Before  </b>
+        <br/>
+        <div class="container">
+          <div class="row g-3">
+            <div class="col-6">
+              <img style="border-radius: 25px;" src="../static/img/AI/basement/good/1.jpg" class="img-fluid" alt="Image 2">
+            </div>
+            <div class="col-6">
+              <!-- <img style="border-radius: 25px;" src="../static/img/AI/kitchen/good4/1.jpg" class="img-fluid" alt="Image 1"> -->
+            </div>
+          </div>
+
+          <br/>
+          <b>   After  </b>
+          <br/>
+          <div class="row g-3">
+            <div class="col-6">
+              <img style="border-radius: 25px;" src="../static/img/AI/basement/good/2.jpg" class="img-fluid" alt="Image 2">
+            </div>
+            <div class="col-6">
+              <!-- <img style="border-radius: 25px;" src="../static/img/AI/kitchen/good4/2.jpg" class="img-fluid" alt="Image 1"> -->
+            </div>
+          </div>
+        </div>
+
+
     
 
 
