--- a/public/Boardmembers_pro_law/faq_pro/index.html
+++ b/public/Boardmembers_pro_law/faq_pro/index.html
@@ -7,9 +7,9 @@
 <meta name="description" content="">
 <meta name="author" content="Jay">
 
-<link rel="icon" href="../static/logo/eqlogo.png" sizes="32x32" />
-<link rel="icon" href="../static/logo/eqlogo.png" sizes="192x192" />
-<link rel="apple-touch-icon" href="../static/logo/eqlogo.png" />
+<link rel="icon" href="../../static/logo/eqlogo.png" sizes="32x32" />
+<link rel="icon" href="../../static/logo/eqlogo.png" sizes="192x192" />
+<link rel="apple-touch-icon" href="../../static/logo/eqlogo.png" />
 <title>Faq & Deals | Equity Group </title>
 
 <!-- <link rel="canonical" href="https://getbootstrap.com/docs/5.3/examples/heroes/"> -->
