--- a/public/Boardmembers_pro_law/index.html
+++ b/public/Boardmembers_pro_law/index.html
@@ -472,18 +472,19 @@
     <br/>
     
     <li class="p-20">
-      For initial few deals up to 5 million, we'll handle financial and legal due diligence in-house, 
-      but seek advice on local laws from your firm. <br/><br/>
+      For deals under $5 million initially, we'll manage the financial and high-level legal due diligence ourselves. 
+      However, we'll rely on your expertise for guidance on local legal compliance.
+      <br/><br/>
     </li> 
     
-    <li class="p-20">
-      We will bring larger deals to you. 
-      Before bringing any deals to you for due diligence, we will conduct our own thorough due diligence to ensure that the deals are viable and likely to close successfully.
+    <li class="p-20"> 
+      We will only bring high-quality deals to your firm for due diligence. 
+      We will conduct a thorough internal due diligence beforehand to ensure they're viable and likely to close successfully.
       <br/><br/>
     </li> 
 
     <li class="p-20">
-      We will only bring fully funded deals for your assistance in due diligence.
+      We'll only present deals for due diligence that have secured funding.
       <br/><br/>
     </li>
 
@@ -493,7 +494,7 @@
   
 </div>
 
-<p class="p-text"> We'll be happy to answer any questions you have during our Zoom call.
+<p class="p-text"> We're happy to address any questions you may have on the call.  
 </p>
 
 </section>
