--- a/public/bm_plan&_deal_flow/jim/index.html
+++ b/public/bm_plan&_deal_flow/jim/index.html
@@ -236,9 +236,11 @@
           25 + years of Real Estate Finance, Accounting, Administration and Leadership with “Big 4” CPA firm experience. A confident, proven professional with strong verbal and written communication skills, motivated by the opportunity to contribute to the success of an organization as a key player in the top leadership team.
          </p>
          <br/><br/>
-          <h2>Hayden Homes  ( 10/2021 - Present )</h2>
-          <!-- <p  class="p-20">Transactions Director, Equity Group</p> -->
-          <p  class="p-20">CFO </p>   
+         <h2>Hayden Homes  </h2>
+         <!-- <p  class="p-20">Transactions Director, Equity Group</p> -->
+         <p  class="p-20"> CFO  ( 10/2012 - Present )</p>   
+         <p  class="p-20"> Vice President of Finance and Accounting ( Oct 2012 to Oct 2021 ) </p>
+
 
             <br/>
              
