--- a/public/Boardmembers_pro_law/fee/index.html
+++ b/public/Boardmembers_pro_law/fee/index.html
@@ -263,6 +263,54 @@
 
 
 
+<!-- New Second st -->
+
+<section class="container">
+  <div class="row py-5">
+  <article class="col-md-6" style="margin-bottom:40px">
+    <p class="trail"><span class="hr"></span>Growth Trajectory</p>
+    <p class="p-text"> Acquistions growth plan</p>
+  </article>
+
+  <article class="col-md-6">
+    <canvas id="myChart" style="width:100%;max-width:600px"></canvas>
+  </article>
+
+</div>
+</section>
+<!-- New Second end -->
+
+
+<script>
+  // var xValues = ["Lost Revenue", "Extra $$ in premium fee"];
+  
+  var xValues = ["Lost Revenue", "France", "Spain", "Extra $$ in premium fee", "USA" ];
+  var yValues = [3, 4, 0, 50, 0];
+  // var barColors = ["red", "green","blue","orange","brown"];
+  var barColors = ["lightblue", "green","blue","orange","brown"];
+  
+  new Chart("myChart", {
+    type: "bar",
+    data: {
+      labels: xValues,
+      datasets: [{
+        backgroundColor: barColors,
+        data: yValues
+      }]
+    },
+    options: {
+      legend: {display: false},
+      title: {
+        display: true,
+        text: "World Wine Production 2018"
+      },
+    }
+  });
+  </script>
+
+  
+
+
 <!-- Third st -->
 
 <section class="container">
