added page for seller

--- a/public/s/board/index.html
+++ b/public/s/board/index.html
@@ -189,15 +189,19 @@
 
  <div class="container-fluid ">
  
-  <h4  class="display-8 m-4" style="margin:10px" > <br/> 
-    The American housing crunch demands creative solutions from the remodeling industry. 
+  <h4  class="display-8 m-4" > <br/>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+    
     <br/>Together, with over 200 years of combined expertise, we will transform existing homes to better meet the needs of today's families. Let's  unlock the potential within existing structures and  revitalize living spaces.
 
   </h4>  
 
  <p> <br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
   
-  Full information about the board members will be provided over the phone call.
+  <!-- Full information about the board members will be provided over the phone call. -->
+  <br/>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+  You can reach out to our lawyer   Mr. Paul Allen  at his email: paul@jpaulallen.com
+   <br/>
 </p>
  
  
@@ -210,9 +214,8 @@
                     style="border-radius: 25px;" width="500" height="610" class="img-fluid lazyload"
                     alt="" loading="lazy"
                     data-src="../../static/img/profile-images/blank.jpg" />
-                    <h2 style="margin-top: 8px;" class="display-10" >Randy </h2>
+
     </div>
-    
   </div>  
   
   <div class="col-md-9" data-aos="fade-left" data-aos-delay="50"data-aos-duration="1000" style="">
@@ -258,7 +261,6 @@
                       style="border-radius: 25px;" width="500" height="610" class="img-fluid lazyload"
                       alt="" loading="lazy"
                       data-src="../../static/img/profile-images/paulF.jpg" />
-                      <h2 style="margin-top: 8px;" class="display-10" >Paul </h2>
 
       </div>
     </div>  
@@ -289,7 +291,6 @@
                       style="border-radius: 25px;" width="500" height="610" class="img-fluid lazyload"
                       alt="" loading="lazy"
                       data-src="../../static/img/profile-images/jim.jpg" />
-                      <h2 style="margin-top: 8px;" class="display-10" >Jim </h2>
 
       </div>
     </div>  
@@ -321,7 +322,6 @@
                       style="border-radius: 25px;" width="500" height="610" class="img-fluid lazyload"
                       alt="" loading="lazy"
                       data-src="../../static/img/profile-images/paulallen.jpeg" />
-                      <h2 style="margin-top: 8px;" class="display-10" >Paul </h2>
 
       </div>
     </div>  
@@ -355,7 +355,6 @@
                     style="border-radius: 25px;" width="500" height="610" class="img-fluid lazyload"
                     alt="" loading="lazy"
                     data-src="../../static/img/profile-images/sal.jpg" />
-                    <h2 style="margin-top: 8px;" class="display-10" >Sal </h2>
 
     </div>
   </div>  
@@ -393,7 +392,6 @@
                       style="border-radius: 25px;" width="500" height="610" class="img-fluid lazyload"
                       alt="" loading="lazy"
                       data-src="../../static/img/profile-images/jay.jpg" />
-                      <h2 style="margin-top: 8px;" class="display-10" >Jay Parteek</h2>
 
       </div>
     </div>  
