deal discussions page added

--- a/public/Boardmembers_pro_law/index.html
+++ b/public/Boardmembers_pro_law/index.html
@@ -325,7 +325,7 @@
 
   </article>
 
-<p> These are conservative figures. We can either pursue more small deals or fewer large deals. </p>
+<!-- <p> These are conservative figures. We can either pursue more small deals or fewer large deals. </p> -->
 
 </div>
 </section>
@@ -378,7 +378,7 @@
         <tr>
           <th scope="row">3 </th>
           <td>Custom Remodeling</td>
-          <td>  </td>
+          <td> state </td>
           <td>512,109</td>
           <td> 4.2 mm</td>
         </tr>
@@ -387,8 +387,8 @@
 
         <tr>
           <th scope="row">4 </th>
-          <td>Home Improvement related</td>
-          <td>  </td>
+          <td>Home Improvement </td>
+          <td> state </td>
           <td></td>
           <td>6 mm </td>
         </tr>
