added page deal discussions

--- a/public/Boardmembers_deals_and_rollup_plan/board/index.html
+++ b/public/Boardmembers_deals_and_rollup_plan/board/index.html
@@ -198,6 +198,12 @@
  <p> <br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
   
   Full information about the board members will be provided over the phone call.
+  
+  <br/><br/>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
+  Here's the status of recent conversations I've had with the sellers.
+      <a class="purpleColor" href="../deal_discussions/"> Deal discussions </a>
+
 </p>
  
  
