--- a/public/s/board/index.html
+++ b/public/s/board/index.html
@@ -189,11 +189,12 @@
 
  <div class="container-fluid ">
  
-  <h4  class="display-8 m-4" > <br/>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+  <!-- <h4  class="display-8 m-4" > <br/>  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
     
-    <br/>Together, with over 200 years of combined expertise, we will transform existing homes to better meet the needs of today's families. Let's  unlock the potential within existing structures and  revitalize living spaces.
+    <br/>Together, with over 200 years of combined expertise, we will transform existing homes to better meet the needs of today's families. 
+    
 
-  </h4>  
+  </h4>   -->
 
  <p> <br/> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  
   
@@ -345,7 +346,7 @@
   </section> 
 
 
-
+<!-- 
 
 <section class="row ">
   <div class="col-md-3">
@@ -378,10 +379,10 @@
   </div>
 
     </div>
-  </div>
+  </div> 
 </section> 
   
-
+-->
 
 
   <section class="row ">
