--- a/public/index.html
+++ b/public/index.html
@@ -425,7 +425,7 @@
             <tbody>
 
               <tr style="border-style: none;">
-                <th class="table-item" scope="row">Flexible terms</th>
+                <th class="table-item" scope="row">Flexible Terms</th>
                 <td> <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                     style="display:block;fill:none;height:24px;width:24px;stroke:#00A506;stroke-width:5.333333333333333;overflow:visible"
                     aria-label="Included" role="img" focusable="false">
@@ -439,7 +439,7 @@
 
 
               <tr>
-                <th class="table-item" scope="row"> No commission/ hidden fee</th>
+                <th class="table-item" scope="row"> No Commission or Hidden Fees</th>
                 <td> <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                     style="display:block;fill:none;height:24px;width:24px;stroke:#00A506;stroke-width:5.333333333333333;overflow:visible"
                     aria-label="Included" role="img" focusable="false">
@@ -466,7 +466,7 @@
               </tr>
 
               <tr>
-                <th class="table-item" scope="row">  You can make small alterations, but they should not impact the total bill </th>
+                <th class="table-item" scope="row">  Cost-effective adjustments, without impacting the total bill </th>
                 <td> <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                     style="display:block;fill:none;height:24px;width:24px;stroke:#00A506;stroke-width:5.333333333333333;overflow:visible"
                     aria-label="Included" role="img" focusable="false">
@@ -493,7 +493,7 @@
               </tr>
 
               <tr>
-                <th class="table-item" scope="row"> No weird terms in the contract</th>
+                <th class="table-item" scope="row"> Clear and Transparent Contracts</th>
                 <td> <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                     style="display:block;fill:none;height:24px;width:24px;stroke:#00A506;stroke-width:5.333333333333333;overflow:visible"
                     aria-label="Included" role="img" focusable="false">
@@ -507,7 +507,7 @@
 
 
               <tr>
-                <th class="table-item" scope="row"> We're local </th>
+                <th class="table-item" scope="row"> Locally Owned and Operated </th>
                 <td> <svg viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"
                     style="display:block;fill:none;height:24px;width:24px;stroke:#00A506;stroke-width:5.333333333333333;overflow:visible"
                     aria-label="Included" role="img" focusable="false">
@@ -577,7 +577,7 @@
         </article>
 
         <article class="d-flex flex-wrap justify-content-between align-items-center">
-          <p class="col-md-4 mb-0">&copy; 2024 Equity Group Capital</p>
+          <p class="col-md-4 mb-0">&copy; 2025 Equity Group Capital</p>
           
 
           <ul class="nav col text-white justify-content-end">
