--- a/public/Boardmembers_pro_law/randy/index.html
+++ b/public/Boardmembers_pro_law/randy/index.html
@@ -261,7 +261,7 @@ Married 35 years with 3 children and 4 grandchildren.
           <p  class="p-20">Led the development of a new 5-year strategic plan, resulting in a substantial increase in market share. </p>   
           <p  class="p-20">Oversee the 4 locations.</p>
           <p  class="p-20">Mentored and coached the key management on leadership development.</p>
-          <p  class="p-20">Grew the company revenues from 0 to 21,104,000 in 2023 with expected revenue in 2024 to be 28,000,000 – 30,000,000. </p>
+          <p  class="p-20">Successfully grew company revenues from $0 to $21.1 million in 2023, with projected revenues reaching approximately $50 million by 2025. </p>
 
             <br/>
              
@@ -301,7 +301,7 @@ Married 35 years with 3 children and 4 grandchildren.
 
 <!-- new -->
               <h2> AMRE (1981 - 1993):  Executive VP </h2>
-              <p> ( Acquired by Ferguson Enterprises ) </p>
+              <p> ( Sold to Ferguson Enterprises ) </p>
 
               <p  class="p-20"> o	Advised on launch strategy for a groundbreaking new product line, leading to a successful market entry.</p>
 
@@ -417,7 +417,7 @@ Married 35 years with 3 children and 4 grandchildren.
     </article>
 
     <article class="d-flex flex-wrap justify-content-between align-items-center pt-3">
-      <p class="col-md-4 mb-0 ">&copy; 2024 Equity Group</p>
+      <p class="col-md-4 mb-0 ">&copy; 2025 Equity Group</p>
 
       <ul class="nav col text-white justify-content-end">
         <li>
