--- a/public/index.html
+++ b/public/index.html
@@ -333,7 +333,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             <div class="single-stat">
         <div
           class="stat text-60 sm:text-40 md:text-50 lg:text-60 xl:text-70 2xl:text-80 leading-1 mb-20 md:mb-11 -mt-5 font-thin"
-          data-aos="fade-in" number="18,535">0
+          data-aos="fade-in" number="535">0
         </div>
         <div class="wysywig" data-aos="fade-in">
           <p>Journeys in last 12 months</p>
@@ -342,25 +342,25 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
             <div class="single-stat">
         <div
           class="stat text-60 sm:text-40 md:text-50 lg:text-60 xl:text-70 2xl:text-80 leading-1 mb-20 md:mb-11 -mt-5 font-thin"
-          data-aos="fade-in" number="465">0
+          data-aos="fade-in" number="30+">0
         </div>
         <div class="wysywig" data-aos="fade-in">
-          <p>Cities served worldwide</p>
+          <p>Cities served in USA</p>
         </div>
       </div>
             <div class="single-stat">
         <div
           class="stat text-60 sm:text-40 md:text-50 lg:text-60 xl:text-70 2xl:text-80 leading-1 mb-20 md:mb-11 -mt-5 font-thin"
-          data-aos="fade-in" number="682">0
+          data-aos="fade-in" number="120+">0
         </div>
         <div class="wysywig" data-aos="fade-in">
-          <p>Touring days in 2024</p>
+          <p>Touring days in 2025</p>
         </div>
       </div>
             <div class="single-stat">
         <div
           class="stat text-60 sm:text-40 md:text-50 lg:text-60 xl:text-70 2xl:text-80 leading-1 mb-20 md:mb-11 -mt-5 font-thin"
-          data-aos="fade-in" number="55+">0
+          data-aos="fade-in" number="1">0
         </div>
         <div class="wysywig" data-aos="fade-in">
           <p>Years in business</p>
